  if it is empty). (foutrelis at gmail dot com, Ilia)
- Fixed bug #50219 (soap call Segmentation fault on a redirected url).
  (Pierrick)
- Fixed bug #50212 (crash by ldap_get_option() with LDAP_OPT_NETWORK_TIMEOUT).
  (Ilia, shigeru_kitazaki at cybozu dot co dot jp)
- Fixed bug #50207 (segmentation fault when concatenating very large strings on
  64bit linux). (Ilia)
- Fixed bug #50185 (ldap_get_entries() return false instead of an empty array
  when there is no error). (Jani)
- Fixed bug #50140 (With default compilation option, php symbols are
  unresolved for nsapi). (Uwe Schindler)
- Fixed bug #50174 (Incorrectly matched docComment). (Felipe)
- Fixed bug #50158 (FILTER_VALIDATE_EMAIL fails with valid addresses
  containing = or ?). (Pierrick)
- Fixed bug #50145 (crash while running bug35634.phpt). (Felipe)
- Fixed bug #50087 (NSAPI performance improvements). (Uwe Schindler)
- Fixed bug #50152 (ReflectionClass::hasProperty behaves like isset() not
  property_exists). (Felipe)
- Fixed bug #50146 (property_exists: Closure object cannot have properties).
  (Felipe)
- Fixed bug #50073 (parse_url() incorrect when ? in fragment). (Ilia)
- Fixed bug #50023 (pdo_mysql doesn't use PHP_MYSQL_UNIX_SOCK_ADDR). (Ilia)
- Fixed bug #50005 (Throwing through Reflection modified Exception object
  makes segmentation fault). (Felipe)
- Fixed bug #49990 (SNMP3 warning message about security level printed twice).
  (Jani)
- Fixed bug #49985 (pdo_pgsql prepare() re-use previous aborted
  transaction). (ben dot pineau at gmail dot com, Ilia, Matteo)  
- Fixed bug #49938 (Phar::isBuffering() returns inverted value). (Greg)
- Fixed bug #49936 (crash with ftp stream in php_stream_context_get_option()).
  (Pierrick)
- Fixed bug #49921 (Curl post upload functions changed). (Ilia)
- Fixed bug #49910 (no support for ././@LongLink for long filenames in phar
  tar support). (Greg)
- Fixed bug #49908 (throwing exceptions in __autoload crashes when interface
  is not defined). (Felipe)